--- a/styles/404-NotFound.css
+++ b/styles/404-NotFound.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 320px) and (max-width: 550px) {
     #notFound {
         position: absolute;
         top: 20px;
@@ -68,7 +68,79 @@
     }
 }
 
-@media screen and (max-width: 1920px) and (min-width: 500px) {
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    #notFound {
+        position: absolute;
+        padding-top: 20px;
+        font-family: Inconsolata;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 25px;
+        color: #333333;
+    }
+    #scareCrow {
+        height: 400px;
+        width: 400px;
+        padding-top: 90px;
+        padding-left: 20px;
+    }
+    .scareCrow-sm-404 {
+        text-align: left;
+    }
+    .not-found-text {
+        text-align: left;
+        margin-top: -310px;
+        padding-left: 500px;
+        width: 900px;
+    }
+    #not-found-sm {
+        font-family: Space Mono;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 40px;
+        letter-spacing: -0.035em;
+        /* Gray 1 */
+        color: #333333;
+    }
+    .text-404 {
+        padding-top: 20px;
+        padding-left: 500px;
+        width: 900px;
+    }
+    #sm-404 {
+        font-family: Space Mono;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        letter-spacing: -0.035em;
+        /* Gray 2 */
+        color: #4F4F4F;
+    }
+    .back-div {
+        padding-top: 60px;
+        padding-left: 500px;
+    }
+    #backButton {
+        background: #333333;
+        height: 70px;
+        width: 250px;
+        font-family: Space Mono;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        letter-spacing: -0.035em;
+        color: #FFFFFF;
+    }
+    .footer {
+        padding-top: 40px;
+        text-align: center;
+        font-family: Space Mono;
+        font-size: 20px;
+        width: 900px;
+    }
+}
+
+@media screen and (max-width: 2560px) and (min-width: 1440px) {
     #notFound {
         position: absolute;
         padding-top: 20px;
