--- a/styles/404-NotFound.css
+++ b/styles/404-NotFound.css
@@ -1,4 +1,7 @@
 @media screen and (min-width: 320px) and (max-width: 768px) {
+    .container-fluid {
+        width: auto;
+    }
     #notFound {
         position: absolute;
         top: 20px;
